# uefi-kernel

./: .editorconfig  Cargo.toml  OVMF_VARS.fd  x86_64-custom.json
.cargo/: config.toml
runner/: Cargo.toml
runner/src/: main.rs
src/: main.rs  panic_handler.rs
src/acpi/: acpi.rs  mod.rs  rsdp.rs  sdt.rs
src/early_boot/: logger.rs  mod.rs
src/interrupts/: handlers.rs  mod.rs
src/memory/: frame_allocator.rs  heap.rs  mod.rs
src/utils/: locked.rs
