[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["runner"]

[package.metadata.bootloader]
map-physical-memory = true

[dependencies]
# Wait for merge into master
# bootloader = "0.10.6"
linked_list_allocator = "0.9.0"
log = "0.4.14"
rustc-demangle = "0.1.19"
spin = "0.9.0"
uefi = "0.11.0"
x86_64 = "0.14.3"
xmas-elf = "0.7.0"

[dependencies.bootloader]
git = "https://github.com/Andy-Python-Programmer/bootloader"

[dependencies.font8x8]
default-features = false
features = ["unicode"]
version = "0.3.1"
